<resources>
    <string name="app_name">Tawajud Premium Plus</string>
    <string name="base_url">https://sgi.software/SAIT_RegistrationService/GeneralService.asmx</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD9mkUzYbstlL_5bEkiwdeIASqfoNh1jfE</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="loc_per_denied">Location permission denied!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_base_url">Change Base URL</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_contact">Contact Us</string>
    <string name="break_out">Break Out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fragment_title_employee_request">Employee Requests</string>
    <string name="fragment_title_emp_anouncemnt">Employee Announcements</string>
    <string name="fragment_title_emp_perm">Employee Permissions</string>
    <string name="Calendar">Calendar</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username">User name must be atleast four characters</string>
    <string name="error_fields_required">Fields are required</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="changeable_base_url">Base URL</string>
    <string name="enable_face_recognition">Enable Face Login</string>
    <string name="face_login">FACE LOGIN</string>
    <string name="pending">Pending</string>
    <string name="reason">Reason</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remmember_me">Remember me</string>
    <string name="or">OR</string>
    <string name="touch_to_login">Touch To Login</string>
    <string name="submit">Submit</string>
    <string name="registerd_text">Please enter registered email, so we can personalize your Application Home</string>
    <string name="welcome">Welcome</string>
    <string name="date_time">Date time</string>
    <string name="attendance">Attendance</string>
    <string name="self_service">Self Service</string>
    <string name="employee_request">Employee Request</string>
    <string name="reports">Reports</string>
    <string name="dashboard">Dashboard</string>
    <string name="employee_profile">Employee Profile</string>
    <string name="fingerprint_message">Confirm fingerprint to continue</string>
    <string name="in">IN</string>
    <string name="out">Out</string>
    <string name="employee_no">Employee No</string>
    <string name="employee_card_no">Employee Card No</string>
    <string name="user_id">User ID</string>
    <string name="role">Role</string>
    <string name="manager">Manager</string>
    <string name="schedule">Schedule</string>
    <string name="entity_name">Entity Name</string>
    <string name="join_date">Join Date</string>
    <string name="grade">Grade</string>
    <string name="admin">Admin</string>
    <string name="okay">Okay</string>
    <string name="packagename">Package</string>
    <string name="release_no">Release No</string>
    <string name="license_start_date">License Start Date</string>
    <string name="users_allowed">Users Allowed</string>
    <string name="users_registered">Users Registered</string>
    <string name="domain_name">Domain Name</string>
    <string name="admin_email">Admin Email</string>
    <string name="admin_mobile">Admin Mobile</string>
    <string name="register">Register</string>
    <string name="total_delay_early_out">Total Delay &amp; Early Out</string>
    <string name="ss_approved_by_manager">Approved By Manager</string>
    <string name="ss_approved_by_hr">Approved By Human Resource</string>
    <string name="ss_rejected_by_manager">Rejected by Manager</string>
    <string name="ss_rejected_by_hr">Rejected By Human Resource</string>
    <string name="ss_approved_by_gm">Approved By General Manager</string>
    <string name="ss_rejected_by_gm">Rejected By General Manager</string>
    <string name="ss_auto_approved">Automatic Approved</string>
    <string name="ss_approved_by_1st_manager">Approved By 1st Manager</string>
    <string name="ss_deleted">Deleted</string>
    <string name="ss_permission_converted_to_leave">Permission Converted To Leave</string>
    <string name="ss_approved_by_2nd_manager">Approved By 2nd Manager</string>
    <string name="ss_rejected_by_2nd_manager">Rejected By 2nd Manager</string>
    <string name="error_server_key">Server not responded</string>
    <string name="employee_list">Employee List</string>
    <string name="h_Leaves">Leaves</string>
    <string name="h_Permissions">Permissions</string>
    <string name="h_Nursing_Permission">Nursing Permission</string>
    <string name="h_Study_Permission">Study Permission</string>
    <string name="h_Holiday">Holidays</string>
    <string name="h_Absent">Absent</string>
    <string name="h_Violations">Violations</string>
    <string name="h_Rest_Day">Rest Day</string>
    <string name="over_time_request">Over Time Request</string>
    <string name="manual_entry_request">Manual Entry Request</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="rejected_by_manager">Rejected by Manager</string>
    <string name="permission_request">Permission Request</string>
    <string name="emp_permission">Permission :</string>
    <string name="emp_to_date">To Date :</string>
    <string name="emp_from_time">From Time :</string>
    <string name="status">Status</string>
    <string name="emp_status">Remarks :</string>
    <string name="date">Date</string>
    <string name="new_cnfrm_pswrd_error">New and Confirm Password must be same</string>
    <string name="pawrd_icorrect">Entered the wrong password</string>
    <string name="enter_remarks">Please enter remarks</string>
    <string name="title">Title</string>
    <string name="cancel_small">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_msg">Are You Sure Do You Want To Approve ?</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="employee_profiles">Employee Profiles</string>
    <string name="approved">Approved</string>
    <string name="to_time">To Time</string>
    <string name="from_time">From Time</string>
    <string name="emp_date">Date :</string>
    <string name="emp_leave">Leave :</string>
    <string name="enter_valid_password_by_finger">To enable login by Finger please enter valid password</string>
    <string name="password_hint">Password</string>
    <string name="register_email_txt">Please enter your email to register</string>
    <string name="time_and_attendance_txt">Every day counts!</string>
    <string name="register_email_edit_txt">10000@smartai.dev</string>
    <string name="user_name_hint_txt">Username</string>
    <string name="in_btn_txt">IN</string>
    <string name="out_btn_txt">OUT</string>
    <string name="no_time_txt">--:--</string>
    <string name="not_available_txt">Not Available</string>
    <string name="last_trasaction_txt">Last Transaction</string>
    <string name="you_are_in_txt">First In</string>
    <string name="you_are_out_txt">Last Out</string>
    <string name="exp_out_txt">Exp. Out</string>
    <string name="work_mode_txt">Work Mode</string>
    <string name="location_txt">Location</string>
    <string name="distance_txt">Distance:</string>
    <string name="attendance_txt">Attendance</string>
    <string name="self_service_txt">Self Services</string>
    <string name="employee_requests_txt">Employee \nRequests</string>
    <string name="summary_txt">Summary</string>
    <string name="calender_txt">Calendar</string>
    <string name="dashboard_txt">Dashboard</string>
    <string name="reports_txt">Reports</string>
    <string name="sunrise_time_txt">07:01</string>
    <string name="sunset_time_txt">18:12</string>
    <string name="delay_title_txt">You have a Delay Today !</string>
    <string name="violation_time_txt">09:00 AM - 09:20 AM</string>
    <string name="duration_home_txt">Duration :</string>
    <string name="duration_time_txt">20 minutes</string>
    <string name="request_manual_entry_btn_txt">Request Manual Entry</string>
    <string name="request_permission_btn_txt">Request Permission</string>
    <string name="you_have_no_violations_txt">YOU HAVE NO VIOLATIONS</string>
    <string name="your_are_punctual_txt">YOUR ARE PUNCTUAL</string>
    <string name="thank_you_txt">THANK YOU</string>
    <string name="day_txt">Wednesday</string>
    <string name="semicolon_txt">:</string>
    <string name="timer_txt">Timer</string>
    <string name="date_time_txt">date_time</string>
    <string name="sign_out_layout_txt">SIGN OUT</string>
    <string name="advance_punch_layout_txt">ADVANCE PUNCH</string>
    <string name="date_and_time_atendaceScreen_txt"><![CDATA[Date & Time]]></string>
    <string name="work_location_txt">Location</string>
    <string name="no_record_found_txt">No Record Found!</string>
    <string name="no_record_found_txt_new">No Record Found!</string>
    <string name="no_record_found_txt_admin">No Record Found!</string>
    <string name="date_txt">Date</string>
    <string name="date_hint_txt">Date</string>
    <string name="time_txt">Time</string>
    <string name="select_permission_txt">Select Permission</string>
    <string name="is_full_day_txt">Is Full Day ?</string>
    <string name="is_flexible_txt">Is Flexible ?</string>
    <string name="is_for_period_txt">Is For Period ?</string>
    <string name="from_date_txt">From Date</string>
    <string name="to_date_txt">To Date</string>
    <string name="from_time_txt">From Time</string>
    <string name="to_time_txt">To Time</string>
    <string name="upload_attachment_txt">Attachment</string>
    <string name="upload_file_txt">Upload File</string>
    <string name="capture_txt">Capture</string>
    <string name="file_name_txt">File name</string>
    <string name="remarks_txt">Remarks</string>
    <string name="send_txt">Send</string>
    <string name="cancel_txt">Cancel</string>
    <string name="total_delay_txt">Total Delay</string>
    <string name="one_hour_time_txt">1h 30m</string>
    <string name="total_early_out_txt">Total Early Out</string>
    <string name="old_password_txt">Current Password</string>
    <string name="old_password_hint_txt">Old Password</string>
    <string name="new_password_txt">New Password</string>
    <string name="new_password_hint_txt">New Password</string>
    <string name="confirm_new_password_txt">Confirm New Password</string>
    <string name="confirm_new_password_hint_txt">Confirm New Password</string>
    <string name="send_btn_txt">Send</string>
    <string name="phone_num_txt">+962-6-5338565</string>
    <string name="mail_txt">Product Helpdesk: info@aman-me.com</string>
    <string name="website_txt">www.aman-me.com</string>
    <string name="company_name_txt">Powered by: Aman Information Systems</string>
    <string name="biometric_cnfrm_txt">Biometric not Registered, Do you want to register Now?</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="sure_txt">Are you sure you want to Logout?</string>
</resources>