<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/full_white_rounded_rectangle"
    android:layout_width="match_parent"
    android:padding="@dimen/_10sdp"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"

    >


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/robotocondensed_regular"
            android:text="@string/old_password_txt"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_text"
            android:gravity="top"
            android:hint="@string/old_password_hint_txt"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_black"
            android:textSize="@dimen/_10ssp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/robotocondensed_regular"
            android:text="@string/new_password_txt"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_text"
            android:gravity="top"
            android:hint="@string/new_password_hint_txt"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_black"
            android:textSize="@dimen/_10ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/robotocondensed_regular"
            android:text="@string/confirm_new_password_txt"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_text"
            android:gravity="top"
            android:hint="@string/confirm_new_password_hint_txt"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_black"
            android:textSize="@dimen/_10ssp" />


        <TextView
            android:id="@+id/txt_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/robotocondensed_regular"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/green_rounded_rectangle"
            android:text="@string/send_btn_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

