<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/setmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/logout"
        android:textColor="@color/black"

        android:textSize="@dimen/_12sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/sure_txt"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/green_rounded_rectangle"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_23sdp"
            android:paddingEnd="@dimen/_23sdp"
            android:text="@string/yes_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/b_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/green_rounded_rectangle"
            android:padding="@dimen/_10sdp"
            android:text="@string/no_txt"
            android:paddingStart="@dimen/_23sdp"
            android:paddingEnd="@dimen/_23sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>