<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_opac"
    android:minWidth="@dimen/_100sdp"
    android:minHeight="@dimen/_100sdp"
    android:orientation="vertical"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:filterTouchesWhenObscured="true"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/allert" />

    <TextView
        android:id="@+id/diag_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/enter_valid_password_by_finger"
        android:textColor="@color/text_color_themed"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:background="@drawable/edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:drawableStart="@drawable/et_pass_left"
        android:drawablePadding="@dimen/x8dp"
        android:gravity="start|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="@dimen/_8sdp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/diag_ok"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="5dp"
            android:background="@drawable/green_rounded_rectangle"
            android:clickable="true"
            android:text="@string/okay"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:focusable="true" />

        <Button
            android:id="@+id/diag_cancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="5dp"
            android:background="@drawable/green_rounded_rectangle"
            android:clickable="true"
            android:text="@string/cancel_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:focusable="true" />


    </LinearLayout>


</LinearLayout>