<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_opac"
    android:minWidth="@dimen/_100sdp"
    android:minHeight="@dimen/_100sdp"
    android:orientation="vertical"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/allert" />

    <TextView
        android:id="@+id/diag_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/biometric_cnfrm_txt"
        android:textColor="@color/text_color_themed"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/diag_cancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="5dp"
            android:background="@drawable/green_rounded_rectangle"
            android:clickable="true"
            android:text="@string/cancel_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:focusable="true" />


        <Button
            android:id="@+id/diag_ok"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="5dp"
            android:background="@drawable/green_rounded_rectangle"
            android:clickable="true"
            android:text="@string/okay"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:focusable="true" />

    </LinearLayout>


</LinearLayout>