<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/full_white_rounded_rectangle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/view_header_line"
            android:layout_width="56dp"
            android:layout_height="@dimen/_4sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@color/grey_lighter" />

        <LinearLayout
            android:id="@+id/ll_complaint_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/phone_svg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/phone_num_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_lighter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/rounded_rectangle_opac"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/message" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1.0"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/mail_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_lighter" />


        <LinearLayout
            android:id="@+id/ll_rateapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/rounded_rectangle_opac"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/website" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/website_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_lighter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/rounded_rectangle_opac"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/info_contact" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1.0"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/company_name_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>

